--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0069.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0069.html
@@ -130,8 +130,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1209 372 1470 414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aninwrum:</ins>
-            <del title="nlp 0.90">aninwrum:</del>
+            <ins title="nlp 2.00">animorum:</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1512 385 1638 426">
@@ -236,8 +235,7 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1542 527 1666 558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">setisu</ins>
-            <del title="nlp 0.90">setisu</del>
+            <ins title="nlp 2.00">sensu</ins>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1706 513 1963 569" lang="grc">
@@ -267,8 +265,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 795 583 1041 638">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ajypdlahat.</ins>
-            <del title="nlp 0.90">ajypdlahat.</del>
+            <ins title="nlp 2.00">appellabat.</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1980 603 1997 628">
@@ -340,8 +337,7 @@
       <span class="ocr_line" title="bbox 217 723 1961 784">
         <span id="w_57" class="ocr_word" title="bbox 217 723 355 768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 383 723 465 768">
@@ -370,9 +366,14 @@
             <ins class="alt" title="nlp 1.00">λέγεται</ins>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 1114 752 1252 758">
+        <span id="w_63_0" class="ocr_word" title="bbox 1114 752 1252 758">
           <span class="alternatives">
-            <ins title="nlp 2.00">— —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_63_1" class="ocr_word" title="bbox 1114 752 1252 758">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1283 726 1355 771" lang="grc">
@@ -387,7 +388,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1445 727 1513 771">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">’</ins>
+            <ins title="nlp 2.00">δι᾿ </ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1532 735 1679 772" lang="grc">
@@ -547,8 +548,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 1235 942 1448 985">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ArcesHas</ins>
-            <del title="nlp 0.90">ArcesHas</del>
+            <ins title="nlp 2.00">Αrcesilas</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1484 943 1709 996">
@@ -601,8 +601,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 838 1013 1024 1056">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sensihus</ins>
-            <del title="nlp 0.90">sensihus</del>
+            <ins title="nlp 2.00">sensibus</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1052 1014 1311 1065">
@@ -715,8 +714,7 @@
       <span class="ocr_line" title="bbox 214 1156 630 1210">
         <span id="w_123" class="ocr_word" title="bbox 214 1156 464 1210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adjungehat</ins>
-            <del title="nlp 0.90">adjungehat</del>
+            <ins title="nlp 2.00">adjungebat</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 493 1156 630 1210">
@@ -843,14 +841,19 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1982 1319 2013 1346">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 215 1369 1960 1428">
-        <span id="w_146" class="ocr_word" title="bbox 215 1369 318 1412" lang="grc">
+        <span id="w_146_0" class="ocr_word" title="bbox 215 1369 318 1412">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλ’</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
+          </span>
+        </span>
+        <span id="w_146_1" class="ocr_word" title="bbox 215 1369 318 1412">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἰ</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 401 1386 546 1424" lang="grc">
@@ -967,7 +970,7 @@
       <span class="ocr_line" title="bbox 335 1583 1959 1642">
         <span id="w_167" class="ocr_word" title="bbox 335 1583 396 1626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">66</ins>
+            <ins title="nlp 2.00">65</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 431 1584 642 1627">
@@ -1020,9 +1023,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1692 1586 1773 1630" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 1692 1586 1773 1630">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπ ’αὐτοῦ〉.</ins>
+            <ins class="alt" title="nlp 2.00">ἀπ᾿</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 1692 1586 1773 1630">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτοῦ&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
@@ -1398,8 +1406,7 @@
       <span class="ocr_line" title="bbox 335 2157 1961 2217">
         <span id="w_249" class="ocr_word" title="bbox 335 2157 429 2200">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aet.</ins>
-            <del title="nlp 0.90">Aet.</del>
+            <ins title="nlp 2.00">Αët.</ins>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 462 2157 573 2201">
@@ -1484,8 +1491,7 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 917 2231 1055 2274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1083 2230 1167 2273">
@@ -1608,9 +1614,14 @@
             <ins class="alt" title="nlp 1.00">ἵππου</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1014 2374 1085 2417" lang="grc">
+        <span id="w_289_0" class="ocr_word" title="bbox 1014 2374 1085 2417">
           <span class="alternatives">
-            <ins title="nlp 2.00">μὴ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 1014 2374 1085 2417">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μὴ</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1117 2375 1176 2430" lang="grc">
@@ -1655,7 +1666,7 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 859 2444 902 2487">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">ΙΙ</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 925 2445 1019 2488">
@@ -1798,8 +1809,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1608 2590 1740 2633">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uUam</ins>
-            <del title="nlp 0.90">uUam</del>
+            <ins title="nlp 2.00">ullam</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 1776 2591 1864 2633">
@@ -1846,19 +1856,17 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1172 2662 1417 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">confwiehat.</ins>
-            <del title="nlp 0.90">confwiehat.</del>
+            <ins title="nlp 2.00">conficiebat.</ins>
           </span>
         </span>
-        <span id="w_332" class="ocr_word" title="bbox 1479 2663 1607 2715">
+        <span id="w_332_0" class="ocr_word" title="bbox 1479 2663 1607 2715">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Natn,</ins>
-            <del title="nlp 0.90">Natn,</del>
+            <ins class="alt" title="nlp 2.00">Nam,</ins>
           </span>
         </span>
-        <span id="w_333" class="ocr_word" title="bbox 1651 2676 1742 2705" lang="grc">
+        <span id="w_332_1" class="ocr_word" title="bbox 1479 2663 1607 2715">
           <span class="alternatives">
-            <ins title="nlp 2.00">Nam,</ins>
+            <ins class="alt" title="nlp 2.00">cum</ins>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1785 2664 1963 2705">
@@ -1892,15 +1900,19 @@
             <del title="nlp 0.90">ostenderat,</del>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1120 2734 1303 2786">
+        <span id="w_339_0" class="ocr_word" title="bbox 1120 2734 1303 2786">
           <span class="alternatives">
-            <ins title="nlp 2.00">„visum"</ins>
+            <ins class="alt" title="nlp 2.00">„visum“</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 1120 2734 1303 2786">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1333 2734 1545 2789">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inquiehat</ins>
-            <del title="nlp 0.90">inquiehat</del>
+            <ins title="nlp 2.00">inquiebat</ins>
           </span>
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1574 2734 1843 2787" lang="grc">
@@ -1908,22 +1920,16 @@
             <ins title="nlp 2.00">„huiusmodi</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 1869 2737 1961 2777">
+        <span id="w_342_0" class="ocr_word" title="bbox 1869 2737 1961 2777">
           <span class="alternatives">
-            <ins title="nlp 2.00">est.“</ins>
-          </span>
-        </span>
-        <span id="w_343" class="ocr_word" title="bbox 1980 2753 2014 2779">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">35</ins>
+            <ins class="alt" title="nlp 2.00">est.“</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 214 2802 1960 2860">
         <span id="w_344" class="ocr_word" title="bbox 214 2802 390 2856">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Deirule,</ins>
-            <del title="nlp 0.90">Deirule,</del>
+            <ins title="nlp 2.00">Deinde,</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 421 2816 513 2846">
@@ -1955,14 +1961,14 @@
             <ins title="nlp 2.00">„adsensus</ins>
           </span>
         </span>
-        <span id="w_350" class="ocr_word" title="bbox 1515 2806 1789 2849">
+        <span id="w_350_0" class="ocr_word" title="bbox 1515 2806 1789 2849">
           <span class="alternatives">
-            <ins title="nlp 2.00">huiusmodi.“</ins>
+            <ins class="alt" title="nlp 2.00">huiusmodi.“</ins>
           </span>
         </span>
-        <span id="w_351" class="ocr_word" title="bbox 1853 2806 1960 2848" lang="grc">
+        <span id="w_350_1" class="ocr_word" title="bbox 1515 2806 1789 2849">
           <span class="alternatives">
-            <ins title="nlp 2.00">Tum</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1990,7 +1996,7 @@
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1103 2963 1124 2993">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">.3</ins>
+            <ins title="nlp 2.00">3</ins>
           </span>
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1151 2959 1189 2994">
@@ -2016,19 +2022,19 @@
             <ins title="nlp 2.00">=</ins>
           </span>
         </span>
-        <span id="w_361" class="ocr_word" title="bbox 1597 2957 1658 3004" lang="grc">
+        <span id="w_361_0" class="ocr_word" title="bbox 1597 2957 1658 3004">
           <span class="alternatives">
-            <ins title="nlp 2.00">εφ’</ins>
+            <ins class="alt" title="nlp 2.00">ἐφ᾿</ins>
+          </span>
+        </span>
+        <span id="w_361_1" class="ocr_word" title="bbox 1597 2957 1658 3004">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_362" class="ocr_word" title="bbox 1677 2972 1765 3005" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἡμῖν</ins>
-          </span>
-        </span>
-        <span id="w_363" class="ocr_word" title="bbox 1791 2955 1899 2995" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
       </span>
@@ -2095,7 +2101,7 @@
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1647 3013 1732 3059" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴπῃ</ins>
+            <ins title="nlp 2.00">εἴπη</ins>
           </span>
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1758 3012 1830 3057">
@@ -2216,14 +2222,12 @@
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1165 3121 1339 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ultimura</ins>
-            <del title="nlp 0.90">ultimura</del>
+            <ins title="nlp 2.00">ultimum</ins>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1365 3121 1602 3158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">euuntiatum</ins>
-            <del title="nlp 0.90">euuntiatum</del>
+            <ins title="nlp 2.00">enuntiatum</ins>
           </span>
         </span>
         <span id="w_398" class="ocr_word" title="bbox 1629 3131 1701 3156">
@@ -2253,8 +2257,7 @@
         </span>
         <span id="w_402" class="ocr_word" title="bbox 549 3174 624 3208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rod.</ins>
-            <del title="nlp 0.90">rod.</del>
+            <ins title="nlp 2.00">cod.</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 654 3174 840 3213" lang="grc">
