--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0070.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0070.html
@@ -31,8 +31,7 @@
       <span class="ocr_line" title="bbox 372 321 2106 376">
         <span id="w_3" class="ocr_word" title="bbox 372 335 463 364">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oum</ins>
-            <del title="nlp 0.90">oum</del>
+            <ins title="nlp 2.00">cum</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 486 321 617 376">
@@ -234,8 +233,7 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1406 535 1621 577">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sdentiam</ins>
-            <del title="nlp 0.90">sdentiam</del>
+            <ins title="nlp 2.00">scientiam</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1664 534 1786 577">
@@ -434,8 +432,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1940 818 2107 861">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">convdli</ins>
-            <del title="nlp 0.90">convdli</del>
+            <ins title="nlp 2.00">convelli</ins>
           </span>
         </span>
       </span>
@@ -752,8 +749,7 @@
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1267 1246 1406 1288">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1432 1244 1517 1288">
@@ -912,17 +908,11 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1855 1457 2108 1512">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">comprehen-</ins>
+            <ins title="nlp 2.00">comprehensionem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 373 1528 2057 1585">
-        <span id="w_158" class="ocr_word" title="bbox 373 1532 527 1574">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sionem</ins>
-            <del title="nlp 0.90">comprehensionem</del>
-          </span>
-        </span>
         <span id="w_159" class="ocr_word" title="bbox 558 1531 786 1583">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">collocabat,</ins>
@@ -1246,17 +1236,11 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 2024 1882 2109 1925">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">He-</ins>
+            <ins title="nlp 2.00">Heronis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 374 1955 2109 2015">
-        <span id="w_225" class="ocr_word" title="bbox 374 1960 490 2003">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ronis</ins>
-            <del title="nlp 0.90">Heronis</del>
-          </span>
-        </span>
         <span id="w_226" class="ocr_word" title="bbox 516 1959 872 2015">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">geometricorum</ins>
@@ -1283,8 +1267,7 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1595 1972 1634 2011">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1646 1956 1743 1997">
@@ -1361,11 +1344,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 376 2094 2108 2157">
-        <span id="w_246" class="ocr_word" title="bbox 376 2114 480 2145" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σατο</ins>
-          </span>
-        </span>
         <span id="w_247" class="ocr_word" title="bbox 513 2101 535 2144" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -1468,8 +1446,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 832 2244 971 2286">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1004 2242 1088 2285" lang="grc">
@@ -1543,7 +1520,7 @@
       <span class="ocr_line" title="bbox 321 2391 2107 2454">
         <span id="w_284" class="ocr_word" title="bbox 321 2417 358 2443">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 497 2398 555 2441">
@@ -1649,7 +1626,7 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1155 2484 1312 2524" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέχνη</ins>
+            <ins title="nlp 2.00">„τέχνη</ins>
           </span>
         </span>
         <span id="w_304" class="ocr_word" title="bbox 1357 2466 1476 2509" lang="grc">
@@ -1676,8 +1653,7 @@
       <span class="ocr_line" title="bbox 376 2539 1349 2596">
         <span id="w_309" class="ocr_word" title="bbox 523 2540 590 2584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δι᾿ </ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 602 2541 710 2584" lang="grc">
@@ -1820,16 +1796,21 @@
             <del title="nlp 0.90">eam</del>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 2034 2677 2109 2719">
+        <span id="w_334_0" class="ocr_word" title="bbox 2034 2677 2109 2719">
           <span class="alternatives">
-            <ins title="nlp 2.00">ZeAd</ins>
+            <ins class="alt" title="nlp 2.00">Ζe-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 498 2853 2108 2901">
-        <span id="w_335" class="ocr_word" title="bbox 498 2863 515 2894">
+        <span id="w_335_0" class="ocr_word" title="bbox 498 2863 515 2894">
           <span class="alternatives">
-            <ins title="nlp 2.00">7</ins>
+            <ins class="alt" title="nlp 2.00">7</ins>
+          </span>
+        </span>
+        <span id="w_335_1" class="ocr_word" title="bbox 498 2863 515 2894">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ad</ins>
           </span>
         </span>
         <span id="w_337" class="ocr_word" title="bbox 627 2858 811 2894">
@@ -1953,8 +1934,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1582 2909 1673 2955">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(scii.</ins>
-            <del title="nlp 0.90">(scii.</del>
+            <ins title="nlp 2.00">(scil.</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1701 2908 1910 2953">
@@ -2167,7 +2147,7 @@
         </span>
         <span id="w_394" class="ocr_word" title="bbox 1754 3068 1786 3103">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_395" class="ocr_word" title="bbox 1811 3081 1846 3113">
@@ -2199,9 +2179,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_400" class="ocr_word" title="bbox 545 3125 620 3169" lang="grc">
+        <span id="w_400_0" class="ocr_word" title="bbox 545 3125 620 3169">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἕξιν—λόυου.</ins>
+            <ins class="alt" title="nlp 2.00">ἕξιν—λόγου.</ins>
+          </span>
+        </span>
+        <span id="w_400_1" class="ocr_word" title="bbox 545 3125 620 3169">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_401" class="ocr_word" title="bbox 853 3125 905 3162">
@@ -2254,11 +2239,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse</ins>
             <del title="nlp 0.90">esse</del>
-          </span>
-        </span>
-        <span id="w_410" class="ocr_word" title="bbox 1912 3121 2110 3165" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιστήμης</ins>
           </span>
         </span>
       </span>
