--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0071.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0071.html
@@ -60,14 +60,12 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1265 284 1349 328">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hco</ins>
-            <del title="nlp 0.90">hco</del>
+            <ins title="nlp 2.00">loco</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1379 284 1554 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aUeram</ins>
-            <del title="nlp 0.90">aUeram</del>
+            <ins title="nlp 2.00">alteram</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1592 284 1709 329" lang="grc">
@@ -281,7 +279,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 2026 588 2042 615">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -504,9 +502,14 @@
             <ins class="alt" title="nlp 1.00">τέχνην</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1452 851 1552 900" lang="grc">
+        <span id="w_90_0" class="ocr_word" title="bbox 1452 851 1552 900">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὸἷον</ins>
+            <ins class="alt" title="nlp 2.00">οἷον</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 1452 851 1552 900">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1582 868 1781 912" lang="grc">
@@ -519,18 +522,8 @@
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1878 872 2007 899" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καταλήψεων</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 262 926 2060 986">
-        <span id="w_94" class="ocr_word" title="bbox 262 931 438 985" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λήψεων</ins>
-          </span>
-        </span>
         <span id="w_95" class="ocr_word" title="bbox 470 928 893 986" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐγγεγυμνασμένων</ins>
@@ -587,8 +580,7 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 2027 944 2060 971">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lo</ins>
-            <del title="nlp 0.90">lo</del>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -637,8 +629,7 @@
       <span class="ocr_line" title="bbox 259 1071 2004 1130">
         <span id="w_114" class="ocr_word" title="bbox 259 1072 331 1116">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xal</ins>
-            <del title="nlp 0.90">xal</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 364 1072 433 1116" lang="grc">
@@ -738,8 +729,7 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1221 1142 1304 1187">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VH</ins>
-            <del title="nlp 0.90">VH</del>
+            <ins title="nlp 2.00">VII</ins>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1334 1143 1430 1199">
@@ -770,12 +760,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 1214 2005 1273">
-        <span id="w_139" class="ocr_word" title="bbox 258 1230 349 1273">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nys.</ins>
-            <del title="nlp 0.90">Dionys.</del>
-          </span>
-        </span>
         <span id="w_140" class="ocr_word" title="bbox 375 1216 525 1259">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Thrac.</ins>
@@ -945,8 +929,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 999 1430 1189 1474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omnihus</ins>
-            <del title="nlp 0.90">omnihus</del>
+            <ins title="nlp 2.00">omnibus</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1211 1431 1298 1484">
@@ -957,8 +940,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1315 1430 1516 1485">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">prohaius</ins>
-            <del title="nlp 0.90">prohaius</del>
+            <ins title="nlp 2.00">probatus</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1539 1430 1641 1484">
@@ -989,8 +971,7 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 329 1503 658 1558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perceptionihus</ins>
-            <del title="nlp 0.90">perceptionihus</del>
+            <ins title="nlp 2.00">perceptionibus</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 688 1503 1029 1546">
@@ -1025,14 +1006,12 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1641 1502 1782 1544">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utUem</ins>
-            <del title="nlp 0.90">utUem</del>
+            <ins title="nlp 2.00">utilem</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1808 1503 1925 1544">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vitxie.</ins>
-            <del title="nlp 0.90">vitxie.</del>
+            <ins title="nlp 2.00">vitae.</ins>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1946 1527 2004 1532">
@@ -1133,8 +1112,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 891 1647 1032 1690">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uiUem</ins>
-            <del title="nlp 0.90">uiUem</del>
+            <ins title="nlp 2.00">utilem</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1063 1647 1172 1689">
@@ -1282,8 +1260,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 501 1791 831 1845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perceptionihus</ins>
-            <del title="nlp 0.90">perceptionihus</del>
+            <ins title="nlp 2.00">perceptionibus</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 861 1794 1026 1834">
@@ -1431,7 +1408,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 586 1933 628 1977">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 651 1934 745 1977">
@@ -1447,8 +1424,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 851 1935 1000 1989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quihus</ins>
-            <del title="nlp 0.90">quihus</del>
+            <ins title="nlp 2.00">quibus</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1024 1934 1260 1989">
@@ -1483,8 +1459,7 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1751 1933 2003 1987">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">comparafis</ins>
-            <del title="nlp 0.90">comparafis</del>
+            <ins title="nlp 2.00">comparatis</ins>
           </span>
         </span>
       </span>
@@ -1503,8 +1478,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 577 2007 782 2061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">effidmus</ins>
-            <del title="nlp 0.90">effidmus</del>
+            <ins title="nlp 2.00">efficimus</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 803 2008 968 2061">
@@ -1566,9 +1540,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 596 2078 785 2121">
+        <span id="w_281_0" class="ocr_word" title="bbox 596 2078 785 2121">
           <span class="alternatives">
-            <ins title="nlp 2.00">93—97.</ins>
+            <ins class="alt" title="nlp 2.00">93—97.</ins>
           </span>
         </span>
       </span>
@@ -1684,7 +1658,7 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1694 2492 2000 2549" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προυπέβαλεν</ins>
+            <ins title="nlp 2.00">προΰπέβαλεν</ins>
           </span>
         </span>
       </span>
@@ -1696,7 +1670,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 484 2586 582 2625" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωνή</ins>
+            <ins title="nlp 2.00">„φωνή</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 673 2568 792 2611" lang="grc">
@@ -1735,7 +1709,7 @@
         </span>
         <span id="w_312" class="ocr_word" title="bbox 626 2639 766 2682">
           <span class="alternatives">
-            <ins title="nlp 2.00">Leërt. </ins>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_313" class="ocr_word" title="bbox 799 2638 882 2682" lang="grc">
@@ -1967,7 +1941,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1230 2936 1402 2992" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">τάττων</ins>
+            <ins title="nlp 2.00">ἰδίωμα,</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1435 2935 1509 2978" lang="grc">
@@ -2112,8 +2086,7 @@
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1722 3162 1883 3193">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oninem</ins>
-            <del title="nlp 0.90">oninem</del>
+            <ins title="nlp 2.00">omnem</ins>
           </span>
         </span>
         <span id="w_385" class="ocr_word" title="bbox 1912 3149 1998 3193">
