--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0072.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0072.html
@@ -104,8 +104,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 648 373 905 416">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dialedicam</ins>
-            <del title="nlp 0.90">dialedicam</del>
+            <ins title="nlp 2.00">dialecticam</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 928 374 1066 428">
@@ -159,14 +158,12 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 750 445 953 487">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dialedici</ins>
-            <del title="nlp 0.90">dialedici</del>
+            <ins title="nlp 2.00">dialectici</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 994 448 1130 487">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auiem</ins>
-            <del title="nlp 0.90">auiem</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1173 444 1450 498">
@@ -207,8 +204,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 515 516 595 569">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iUe,</ins>
-            <del title="nlp 0.90">iUe,</del>
+            <ins title="nlp 2.00">ille,</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 627 530 655 559">
@@ -224,8 +220,7 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 793 516 1018 570">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disdplina</ins>
-            <del title="nlp 0.90">disdplina</del>
+            <ins title="nlp 2.00">disciplina</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1048 514 1278 559">
@@ -261,7 +256,7 @@
       <span class="ocr_line" title="bbox 286 586 2054 643">
         <span id="w_43" class="ocr_word" title="bbox 286 605 302 633">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 321 588 425 643">
@@ -290,8 +285,7 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 835 588 1050 639">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interessd,</ins>
-            <del title="nlp 0.90">interessd,</del>
+            <ins title="nlp 2.00">interesset,</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1081 600 1182 629">
@@ -375,8 +369,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 2019 662 2057 701">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">d</ins>
-            <del title="nlp 0.90">d</del>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
       </span>
@@ -413,8 +406,7 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1370 728 1639 783">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doqumtiam</ins>
-            <del title="nlp 0.90">doqumtiam</del>
+            <ins title="nlp 2.00">eloquentiam</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1676 742 1758 772">
@@ -425,8 +417,7 @@
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1801 729 1966 771">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dicehat.</ins>
-            <del title="nlp 0.90">dicehat.</del>
+            <ins title="nlp 2.00">dicebat.</ins>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1997 753 2056 760">
@@ -526,8 +517,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 695 871 889 914">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rhdorice</ins>
-            <del title="nlp 0.90">rhdorice</del>
+            <ins title="nlp 2.00">rhetorice</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 931 871 1101 923">
@@ -556,14 +546,12 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1685 871 1911 922">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dialedice;</ins>
-            <del title="nlp 0.90">dialedice;</del>
+            <ins title="nlp 2.00">dialectice;</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1954 884 2058 925">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qms</ins>
-            <del title="nlp 0.90">qms</del>
+            <ins title="nlp 2.00">quas</ins>
           </span>
         </span>
       </span>
@@ -647,8 +635,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 729 1015 876 1057">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dicerd</ins>
-            <del title="nlp 0.90">dicerd</del>
+            <ins title="nlp 2.00">diceret</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 904 1013 1082 1057">
@@ -802,8 +789,7 @@
       <span class="ocr_line" title="bbox 324 1226 1465 1283">
         <span id="w_135" class="ocr_word" title="bbox 519 1228 680 1283">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(tueriy</ins>
-            <del title="nlp 0.90">(tueriy</del>
+            <ins title="nlp 2.00">&lt;tueri&gt;</ins>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 711 1231 786 1271">
@@ -826,8 +812,7 @@
         </span>
         <span id="w_139" class="ocr_word" title="bbox 1203 1226 1465 1281">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rdiquerunt.</ins>
-            <del title="nlp 0.90">rdiquerunt.</del>
+            <ins title="nlp 2.00">reliquerunt.</ins>
           </span>
         </span>
       </span>
@@ -888,20 +873,20 @@
             <del title="nlp 0.90">verecundiam,</del>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 1702 1299 1776 1352">
+        <span id="w_150_0" class="ocr_word" title="bbox 1702 1299 1776 1352">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;tu</ins>
+            <ins class="alt" title="nlp 2.00">&lt;tu</ins>
+          </span>
+        </span>
+        <span id="w_150_1" class="ocr_word" title="bbox 1702 1299 1776 1352">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1806 1302 1942 1341">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">autem</ins>
             <del title="nlp 0.90">autem</del>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 1962 1331 2061 1341">
-          <span class="alternatives">
-            <ins title="nlp 2.00">. . .</ins>
           </span>
         </span>
       </span>
@@ -913,8 +898,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 393 1371 510 1426">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iamy</ins>
-            <del title="nlp 0.90">iamy</del>
+            <ins title="nlp 2.00">iam&gt;</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 540 1370 602 1413">
@@ -1040,7 +1024,7 @@
       <span class="ocr_line" title="bbox 323 1511 2064 1567">
         <span id="w_176" class="ocr_word" title="bbox 323 1538 382 1545">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_177" class="ocr_word" title="bbox 411 1514 493 1565">
@@ -1063,14 +1047,12 @@
         </span>
         <span id="w_180" class="ocr_word" title="bbox 724 1512 862 1567">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">placd</ins>
-            <del title="nlp 0.90">placd</del>
+            <ins title="nlp 2.00">placet</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 892 1511 1042 1555">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoids</ins>
-            <del title="nlp 0.90">Stoids</del>
+            <ins title="nlp 2.00">Stoicis</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1065 1525 1138 1555">
@@ -1099,8 +1081,7 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1712 1512 1931 1566">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appeUare.</ins>
-            <del title="nlp 0.90">appeUare.</del>
+            <ins title="nlp 2.00">appellare.</ins>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1991 1511 2064 1556">
@@ -1137,8 +1118,7 @@
         </span>
         <span id="w_192" class="ocr_word" title="bbox 999 1583 1222 1635">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dbscenum,</ins>
-            <del title="nlp 0.90">dbscenum,</del>
+            <ins title="nlp 2.00">obscenum,</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1265 1583 1374 1625">
@@ -1147,9 +1127,14 @@
             <del title="nlp 0.90">nihil</del>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1404 1586 1520 1637" lang="grc">
+        <span id="w_194_0" class="ocr_word" title="bbox 1404 1586 1520 1637">
           <span class="alternatives">
-            <ins title="nlp 2.00">nihil</ins>
+            <ins class="alt" title="nlp 2.00">turpe</ins>
+          </span>
+        </span>
+        <span id="w_194_1" class="ocr_word" title="bbox 1404 1586 1520 1637">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1557 1584 1690 1634">
@@ -1170,17 +1155,11 @@
             <del title="nlp 0.90">si</del>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1956 1584 2065 1638">
-          <span class="alternatives">
-            <ins title="nlp 2.00">quod</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 271 1654 2064 1709">
         <span id="w_199" class="ocr_word" title="bbox 271 1675 306 1701">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">io</ins>
-            <del title="nlp 0.90">io</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 323 1657 379 1699">
@@ -1197,8 +1176,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 485 1655 725 1698">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">obscmitate</ins>
-            <del title="nlp 0.90">obscmitate</del>
+            <ins title="nlp 2.00">obscenitate</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 760 1655 986 1709">
@@ -1366,8 +1344,7 @@
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1162 1797 1287 1839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diam</ins>
-            <del title="nlp 0.90">diam</del>
+            <ins title="nlp 2.00">etiam</ins>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1318 1798 1366 1839">
@@ -1388,9 +1365,9 @@
             <del title="nlp 0.90">(sec.</del>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1809 1797 2062 1853">
+        <span id="w_235_0" class="ocr_word" title="bbox 1809 1797 2062 1853">
           <span class="alternatives">
-            <ins title="nlp 2.00">(secl exempla).</ins>
+            <ins class="alt" title="nlp 2.00">exempla).</ins>
           </span>
         </span>
       </span>
@@ -1798,9 +1775,14 @@
             <ins class="alt" title="nlp 1.00">εὐθυρρημονήσει.</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 1599 2249 1735 2254">
+        <span id="w_305_0" class="ocr_word" title="bbox 1599 2249 1735 2254">
           <span class="alternatives">
-            <ins title="nlp 2.00">— —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_305_1" class="ocr_word" title="bbox 1599 2249 1735 2254">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 1764 2238 1833 2279">
@@ -1835,8 +1817,7 @@
         </span>
         <span id="w_311" class="ocr_word" title="bbox 870 2297 981 2339">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tedis</ins>
-            <del title="nlp 0.90">tedis</del>
+            <ins title="nlp 2.00">tectis</ins>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 1022 2296 1155 2339">
@@ -1896,8 +1877,7 @@
         </span>
         <span id="w_321" class="ocr_word" title="bbox 486 2368 635 2420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoid;</ins>
-            <del title="nlp 0.90">Stoid;</del>
+            <ins title="nlp 2.00">Stoici;</ins>
           </span>
         </span>
         <span id="w_322" class="ocr_word" title="bbox 666 2368 739 2411">
@@ -1950,8 +1930,7 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1815 2371 1954 2409">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ruMus</ins>
-            <del title="nlp 0.90">ruMus</del>
+            <ins title="nlp 2.00">ructus</ins>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1983 2380 2066 2410">
@@ -2043,8 +2022,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1992 2511 2066 2564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gpii</ins>
-            <del title="nlp 0.90">gpii</del>
+            <ins title="nlp 2.00">qui</ins>
           </span>
         </span>
       </span>
@@ -2057,8 +2035,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 518 2581 646 2625">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoid</ins>
-            <del title="nlp 0.90">Stoid</del>
+            <ins title="nlp 2.00">Stoici</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 668 2596 804 2637">
@@ -2087,8 +2064,7 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 1444 2585 1482 2624">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">d</ins>
-            <del title="nlp 0.90">d</del>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1510 2581 1705 2632">
@@ -2196,8 +2172,7 @@
         </span>
         <span id="w_370" class="ocr_word" title="bbox 595 2725 844 2779">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appdlemus</ins>
-            <del title="nlp 0.90">appdlemus</del>
+            <ins title="nlp 2.00">appellemus</ins>
           </span>
         </span>
         <span id="w_371" class="ocr_word" title="bbox 872 2726 970 2768">
@@ -2269,8 +2244,7 @@
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1067 2796 1207 2839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">liheris</ins>
-            <del title="nlp 0.90">liheris</del>
+            <ins title="nlp 2.00">liberis</ins>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1243 2796 1345 2838">
@@ -2311,14 +2285,12 @@
       <span class="ocr_line" title="bbox 329 2867 2064 2922">
         <span id="w_390" class="ocr_word" title="bbox 469 2867 701 2918">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ohscenum;</ins>
-            <del title="nlp 0.90">ohscenum;</del>
+            <ins title="nlp 2.00">obscenum;</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 726 2868 933 2922">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">phiraque</ins>
-            <del title="nlp 0.90">phiraque</del>
+            <ins title="nlp 2.00">pluraque</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 961 2869 1009 2910">
@@ -2347,8 +2319,7 @@
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1518 2867 1669 2910">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dsdem</ins>
-            <del title="nlp 0.90">dsdem</del>
+            <ins title="nlp 2.00">eisdem</ins>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1700 2870 1843 2909">
@@ -2357,9 +2328,9 @@
             <del title="nlp 0.90">contra</del>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 1878 2880 2064 2909">
+        <span id="w_398_0" class="ocr_word" title="bbox 1878 2880 2064 2909">
           <span class="alternatives">
-            <ins title="nlp 2.00">nerecundiam</ins>
+            <ins class="alt" title="nlp 2.00">verecundiam</ins>
           </span>
         </span>
       </span>
