--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0073.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0073.html
@@ -267,7 +267,7 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1680 573 1739 624" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1783 574 1824 616" lang="grc">
@@ -505,8 +505,7 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 644 930 774 972">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tinda</ins>
-            <del title="nlp 0.90">tinda</del>
+            <ins title="nlp 2.00">tincta</ins>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 806 942 890 973">
@@ -673,8 +672,7 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 696 1216 835 1259">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 862 1216 947 1260">
@@ -992,8 +990,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 2000 1666 2035 1691">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">so</ins>
-            <del title="nlp 0.90">so</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1714,8 +1711,7 @@
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1999 2737 2034 2766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">u</ins>
-            <del title="nlp 0.90">u</del>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
       </span>
@@ -1751,8 +1747,7 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 831 2853 932 2889">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PoSt.</ins>
-            <del title="nlp 0.90">PoSt.</del>
+            <ins title="nlp 2.00">Poët.</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 954 2852 1037 2898">
@@ -2042,8 +2037,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1259 3067 1386 3104">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Joum.</ins>
-            <del title="nlp 0.90">Joum.</del>
+            <ins title="nlp 2.00">Journ.</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1414 3066 1456 3104">
